@@ -1,10 +1,0 @@
-<component name="libraryTable">
-  <library name="Solr DIH library">
-    <CLASSES>
-      <root url="file://$PROJECT_DIR$/solr/contrib/dataimporthandler/lib" />
-    </CLASSES>
-    <JAVADOC />
-    <SOURCES />
-    <jarDirectory url="file://$PROJECT_DIR$/solr/contrib/dataimporthandler/lib" recursive="false" />
-  </library>
-</component>
