@@ -31,6 +31,9 @@
     <conf name="test" transitive="false"/>
   </configurations>
   <dependencies>
+    <dependency org="javax.activation" name="activation" rev="${/javax.activation/activation}" conf="compile->*"/>
+    <dependency org="com.sun.mail" name="javax.mail" rev="${/com.sun.mail/javax.mail}"  conf="compile->*"/>
+    <dependency org="com.sun.mail" name="gimap" rev="${/com.sun.mail/gimap}"  conf="compile->*"/>  
     <dependency org="org.slf4j" name="jcl-over-slf4j" rev="${/org.slf4j/jcl-over-slf4j}" conf="test->*"/>
   </dependencies>
 </ivy-module>
